# rust-ha

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: basic.rs
proto/: sql.proto
src/: client.rs  connection.rs  datasource.rs  embedded_replicas.rs  error.rs  lib.rs  value.rs
